--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
     "gray-matter": "^4.0.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
@@ -20,6 +21,7 @@
     "remark": "^12.0.0",
     "remark-html": "^11.0.2",
     "sass": "^1.26.8",
+    "swr": "^0.2.3",
     "tailwindcss": "^1.4.6"
   }
 }
